# face-aging

./: README.md  pyproject.toml
app/: __init__.py  config.py
app/api/: main.py
app/modules/common/: __init__.py  exceptions.py  logger.py  service.py
app/modules/image/: __init__.py
app/modules/image/domain/: __init__.py  common.py
app/modules/image/domain/face_aging/: face_aging.py  face_aging_stylegan.py
app/modules/image/domain/face_detection/: __init__.py  face_detection.py  mtcnn_face_detection.py
app/modules/image/models/: __init__.py  face_aging.py
app/modules/image/src/: __init__.py  factory.py
app/modules/image/src/api/: __init__.py  http_router.py
app/modules/image/src/api/http/: __init__.py  face_aging.py
app/modules/image/src/service/: __init__.py  face_aging.py
app/modules/image/tests/integration/: face_aging.py
app/modules/image/tests/setup/: __init__.py
app/modules/image/tests/setup/base64_images/: __init__.py  noface.py  sneijder.py
